<resources>
    <string name="app_name">API Libraries Demo</string>
    <string name="action_settings">Settings</string>
    <string name="launch">Launch</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="filter_component">Component</string>
    <string name="filter_design">Design</string>
    <string name="filter_game">Game</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_about">About</string>
    <string name="category">Categories</string>
    <string name="card_title_description">Description</string>
    <string name="action_search">Search</string>
    <string name="disconnect_summary">Detach your Google account from this app</string>
    <string name="disconnect_title">Disconnect</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="feedback_title">Contact support</string>
    <string name="err_msg_field">This field is required</string>
    <string name="feedback_thanks">Thank You!</string>
    <string name="app_description">Designed for developers and designers, this application provides
        a collection of examples of third-party libraries on Android. These examples are inspired
        from source code present on the Android Developers site.
    </string>
    <string name="contributor">Contributor</string>
    <string name="contributor_text">Illustrations by Cassandra Vion</string>
    <string name="language">Language</string>
    <string name="no_data_available">No module found</string>

    <string name="copyright" translatable="false">Copyright 2016</string>
    <string name="author" translatable="false">Thibault Vieux</string>
    <string name="detail_desc" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
</resources>
