<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.melkir.googlesamplesdemo.activity.AboutActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/card_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/md_keylines"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/app_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/app_logo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="-10px"
                        card_view:srcCompat="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/app_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/app_logo"
                        android:text="@string/app_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/app_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/app_description" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_contributors"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/card_summary"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:onClick="onContributorCardClick"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_keylines">

                <TextView
                    android:id="@+id/contributor_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contributor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/contributor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/contributor_text" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_copyright"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_below="@+id/card_contributors"
            android:layout_marginBottom="12dp"
            card_view:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/md_keylines">

                <TextView
                    android:id="@+id/copyright_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/copyright_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/author" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>